--- a/V1.1.ioc
+++ b/V1.1.ioc
@@ -85,21 +85,21 @@ Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA0
 Mcu.Pin1=PA1
-Mcu.Pin10=PB13
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
+Mcu.Pin10=PA14
+Mcu.Pin11=PB4
+Mcu.Pin12=PB5
 Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin14=VP_SYS_VS_DBSignals
 Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PB12
+Mcu.Pin4=PB0
+Mcu.Pin5=PB1
+Mcu.Pin6=PB12
+Mcu.Pin7=PB13
+Mcu.Pin8=PC7
+Mcu.Pin9=PA13
 Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -131,12 +131,6 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.Signal=S_TIM3_CH2
-PA6.Signal=S_TIM3_CH1
-PA7.GPIOParameters=GPIO_Label
-PA7.GPIO_Label=TEST_ADC
-PA7.Locked=true
-PA7.Signal=GPIO_Output
 PB0.Mode=IN12-Single-Ended
 PB0.Signal=ADC3_IN12
 PB1.Mode=IN1-Single-Ended
@@ -145,6 +139,14 @@ PB12.Mode=IN3-Single-Ended
 PB12.Signal=ADC4_IN3
 PB13.Mode=IN5-Single-Ended
 PB13.Signal=ADC3_IN5
+PB4.Locked=true
+PB4.Signal=S_TIM3_CH1
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=TEST_ADC
+PB5.Locked=true
+PB5.Signal=GPIO_Output
+PC7.Locked=true
+PC7.Signal=S_TIM3_CH2
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -234,9 +236,10 @@ TIM2.IPParameters=Prescaler,PeriodNoDither,TIM_MasterOutputTrigger,Channel-PWM G
 TIM2.PeriodNoDither=149
 TIM2.Prescaler=9
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,PeriodNoDither,TIM_MasterOutputTrigger,Channel-PWM Generation2 CH2
+TIM3.IPParameters=Prescaler,PeriodNoDither,TIM_MasterOutputTrigger,Channel-PWM Generation2 CH2,AutoReloadPreload,Channel-PWM Generation1 CH1
 TIM3.PeriodNoDither=149
 TIM3.Prescaler=9
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
