--- a/V1.1.ioc
+++ b/V1.1.ioc
@@ -8,63 +8,27 @@ ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-2\#ChannelRegularConversion=1
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
-ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC3.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC3.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
-ADC3.DMAContinuousRequests=ENABLE
-ADC3.ExternalTrigConv=ADC_EXTERNALTRIG_T3_CC1
-ADC3.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_FALLING
-ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,ExternalTrigConv,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversion,DMAContinuousRequests,ExternalTrigConvEdge
-ADC3.NbrOfConversion=3
+ADC3.ContinuousConvMode=ENABLE
+ADC3.DMAContinuousRequests=DISABLE
+ADC3.EnableInjectedConversion=ENABLE
+ADC3.EnableInjectedOversampling=DISABLE
+ADC3.EnableRegularConversion=ENABLE
+ADC3.IPParameters=ClockPrescaler,DMAContinuousRequests,EnableInjectedConversion,EnableRegularConversion,EnableInjectedOversampling,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,NbrOfConversionFlag,OversamplingMode,ContinuousConvMode,master,InjectedRank-7\#ChannelInjectedConversion,InjectedChannel-7\#ChannelInjectedConversion,Rank1_Channel,InjectedSamplingTime-7\#ChannelInjectedConversion,InjectedOffsetNumber-7\#ChannelInjectedConversion,InjNumberOfConversion,InjectedConvMode
+ADC3.InjNumberOfConversion=1
+ADC3.InjectedChannel-7\#ChannelInjectedConversion=ADC_CHANNEL_12
+ADC3.InjectedConvMode=AutoInjected
+ADC3.InjectedOffsetNumber-7\#ChannelInjectedConversion=ADC_OFFSET_NONE
+ADC3.InjectedRank-7\#ChannelInjectedConversion=1
+ADC3.InjectedSamplingTime-7\#ChannelInjectedConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC3.NbrOfConversionFlag=1
-ADC3.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC3.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC3.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC3.Rank-0\#ChannelRegularConversion=1
-ADC3.Rank-1\#ChannelRegularConversion=2
-ADC3.Rank-2\#ChannelRegularConversion=3
-ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC3.OffsetNumber-6\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC3.OversamplingMode=DISABLE
+ADC3.Rank-6\#ChannelRegularConversion=1
+ADC3.Rank1_Channel=ADC_CHANNEL_12
+ADC3.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
 ADC3.master=1
-ADC4.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC4.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
-ADC4.EnableInjectedConversion=ENABLE
-ADC4.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJEC_T3_TRGO
-ADC4.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,EnableInjectedConversion,InjectedRank-1\#ChannelInjectedConversion,InjectedChannel-1\#ChannelInjectedConversion,Rank1_Channel,InjectedSamplingTime-1\#ChannelInjectedConversion,InjectedOffsetNumber-1\#ChannelInjectedConversion,InjNumberOfConversion,Rank2_Channel,Rank3_Channel,ExternalTrigInjecConv,injectedQueueMode
-ADC4.InjNumberOfConversion=1
-ADC4.InjectedChannel-1\#ChannelInjectedConversion=ADC_CHANNEL_3
-ADC4.InjectedOffsetNumber-1\#ChannelInjectedConversion=ADC_OFFSET_NONE
-ADC4.InjectedRank-1\#ChannelInjectedConversion=1
-ADC4.InjectedSamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC4.NbrOfConversionFlag=1
-ADC4.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC4.Rank-0\#ChannelRegularConversion=1
-ADC4.Rank1_Channel=ADC_CHANNEL_3
-ADC4.Rank2_Channel=ADC_CHANNEL_3
-ADC4.Rank3_Channel=ADC_CHANNEL_3
-ADC4.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC4.injectedQueueMode=ENABLE
-Dma.ADC3.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC3.0.EventEnable=DISABLE
-Dma.ADC3.0.Instance=DMA1_Channel1
-Dma.ADC3.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.ADC3.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC3.0.Mode=DMA_CIRCULAR
-Dma.ADC3.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.ADC3.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC3.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.ADC3.0.Priority=DMA_PRIORITY_LOW
-Dma.ADC3.0.RequestNumber=1
-Dma.ADC3.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.ADC3.0.SignalID=NONE
-Dma.ADC3.0.SyncEnable=DISABLE
-Dma.ADC3.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.ADC3.0.SyncRequestNumber=1
-Dma.ADC3.0.SyncSignalID=NONE
-Dma.Request0=ADC3
-Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -72,43 +36,40 @@ Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC3
-Mcu.IP2=ADC4
-Mcu.IP3=DMA
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM2
-Mcu.IP8=TIM3
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA0
-Mcu.Pin1=PA1
-Mcu.Pin10=PB13
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_SYS_VS_DBSignals
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PA4
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PB12
-Mcu.PinsNb=17
+Mcu.Pin1=PA2
+Mcu.Pin10=PA14
+Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin12=VP_SYS_VS_DBSignals
+Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM2_VS_no_output2
+Mcu.Pin15=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin2=PA3
+Mcu.Pin3=PA4
+Mcu.Pin4=PA6
+Mcu.Pin5=PA7
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PB13
+Mcu.Pin9=PA13
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
 NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.ADC3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -122,7 +83,6 @@ NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 PA0.Mode=IN1-Single-Ended
 PA0.Signal=ADC1_IN1
-PA1.Signal=S_TIM2_CH2
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -141,8 +101,6 @@ PB0.Mode=IN12-Single-Ended
 PB0.Signal=ADC3_IN12
 PB1.Mode=IN1-Single-Ended
 PB1.Signal=ADC3_IN1
-PB12.Mode=IN3-Single-Ended
-PB12.Signal=ADC4_IN3
 PB13.Mode=IN5-Single-Ended
 PB13.Signal=ADC3_IN5
 PinOutPanel.RotationAngle=0
@@ -173,7 +131,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_ADC4_Init-ADC4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADC12Freq_Value=150000000
 RCC.ADC345Freq_Value=150000000
 RCC.AHBFreq_Value=150000000
@@ -223,14 +181,12 @@ RCC.USART3Freq_Value=150000000
 RCC.USBFreq_Value=150000000
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=300000000
-SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
-SH.S_TIM2_CH2.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
-TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM2.IPParameters=Prescaler,PeriodNoDither,TIM_MasterOutputTrigger,Channel-PWM Generation2 CH2
+TIM2.Channel-PWM\ Generation2\ No\ Output=TIM_CHANNEL_2
+TIM2.IPParameters=Prescaler,PeriodNoDither,TIM_MasterOutputTrigger,Channel-PWM Generation2 No Output
 TIM2.PeriodNoDither=149
 TIM2.Prescaler=9
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
@@ -248,6 +204,8 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
+VP_TIM2_VS_no_output2.Mode=PWM Generation2 No Output
+VP_TIM2_VS_no_output2.Signal=TIM2_VS_no_output2
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=custom
