--- a/V1.1.ioc
+++ b/V1.1.ioc
@@ -15,19 +15,22 @@ ADC3.DMAContinuousRequests=DISABLE
 ADC3.EnableInjectedConversion=ENABLE
 ADC3.EnableInjectedOversampling=DISABLE
 ADC3.EnableRegularConversion=ENABLE
-ADC3.IPParameters=ClockPrescaler,DMAContinuousRequests,EnableInjectedConversion,EnableRegularConversion,EnableInjectedOversampling,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,NbrOfConversionFlag,OversamplingMode,ContinuousConvMode,master,InjectedRank-7\#ChannelInjectedConversion,InjectedChannel-7\#ChannelInjectedConversion,Rank1_Channel,InjectedSamplingTime-7\#ChannelInjectedConversion,InjectedOffsetNumber-7\#ChannelInjectedConversion,InjNumberOfConversion,InjectedConvMode
+ADC3.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJEC_T3_TRGO
+ADC3.IPParameters=ClockPrescaler,DMAContinuousRequests,EnableInjectedConversion,EnableRegularConversion,EnableInjectedOversampling,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,OffsetNumber-6\#ChannelRegularConversion,NbrOfConversionFlag,OversamplingMode,ContinuousConvMode,master,InjectedRank-7\#ChannelInjectedConversion,InjectedChannel-7\#ChannelInjectedConversion,Rank1_Channel,InjectedSamplingTime-7\#ChannelInjectedConversion,InjectedOffsetNumber-7\#ChannelInjectedConversion,InjNumberOfConversion,InjectedConvMode,ExternalTrigInjecConv,injectedQueueMode,QueueInjectedContext
 ADC3.InjNumberOfConversion=1
 ADC3.InjectedChannel-7\#ChannelInjectedConversion=ADC_CHANNEL_12
-ADC3.InjectedConvMode=AutoInjected
+ADC3.InjectedConvMode=Discontinuous
 ADC3.InjectedOffsetNumber-7\#ChannelInjectedConversion=ADC_OFFSET_NONE
 ADC3.InjectedRank-7\#ChannelInjectedConversion=1
-ADC3.InjectedSamplingTime-7\#ChannelInjectedConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC3.InjectedSamplingTime-7\#ChannelInjectedConversion=ADC_SAMPLETIME_640CYCLES_5
 ADC3.NbrOfConversionFlag=1
 ADC3.OffsetNumber-6\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC3.OversamplingMode=DISABLE
+ADC3.QueueInjectedContext=ENABLE
 ADC3.Rank-6\#ChannelRegularConversion=1
 ADC3.Rank1_Channel=ADC_CHANNEL_12
 ADC3.SamplingTime-6\#ChannelRegularConversion=ADC_SAMPLETIME_640CYCLES_5
+ADC3.injectedQueueMode=ENABLE
 ADC3.master=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
