--- a/V1.1.ioc
+++ b/V1.1.ioc
@@ -1,13 +1,4 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC1.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
-ADC1.ExternalTrigConv=ADC_EXTERNALTRIG_T2_CC2
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,NbrOfConversionFlag,ClockPrescaler,ExternalTrigConv
-ADC1.NbrOfConversionFlag=1
-ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.Rank-2\#ChannelRegularConversion=1
-ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.master=1
 ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
 ADC3.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_5
 ADC3.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_12
@@ -28,24 +19,6 @@ ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC3.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC3.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC3.master=1
-ADC4.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC4.ClockPrescaler=ADC_CLOCK_ASYNC_DIV4
-ADC4.EnableInjectedConversion=ENABLE
-ADC4.ExternalTrigInjecConv=ADC_EXTERNALTRIGINJEC_T3_TRGO
-ADC4.IPParameters=Rank-0\#ChannelRegularConversion,ClockPrescaler,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,EnableInjectedConversion,InjectedRank-1\#ChannelInjectedConversion,InjectedChannel-1\#ChannelInjectedConversion,Rank1_Channel,InjectedSamplingTime-1\#ChannelInjectedConversion,InjectedOffsetNumber-1\#ChannelInjectedConversion,InjNumberOfConversion,Rank2_Channel,Rank3_Channel,ExternalTrigInjecConv,injectedQueueMode
-ADC4.InjNumberOfConversion=1
-ADC4.InjectedChannel-1\#ChannelInjectedConversion=ADC_CHANNEL_3
-ADC4.InjectedOffsetNumber-1\#ChannelInjectedConversion=ADC_OFFSET_NONE
-ADC4.InjectedRank-1\#ChannelInjectedConversion=1
-ADC4.InjectedSamplingTime-1\#ChannelInjectedConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC4.NbrOfConversionFlag=1
-ADC4.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC4.Rank-0\#ChannelRegularConversion=1
-ADC4.Rank1_Channel=ADC_CHANNEL_3
-ADC4.Rank2_Channel=ADC_CHANNEL_3
-ADC4.Rank3_Channel=ADC_CHANNEL_3
-ADC4.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC4.injectedQueueMode=ENABLE
 Dma.ADC3.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC3.0.EventEnable=DISABLE
 Dma.ADC3.0.Instance=DMA1_Channel1
@@ -70,43 +43,38 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32G474RET3
 Mcu.Family=STM32G4
-Mcu.IP0=ADC1
-Mcu.IP1=ADC3
-Mcu.IP2=ADC4
-Mcu.IP3=DMA
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=TIM2
-Mcu.IP8=TIM3
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP0=ADC3
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA0
-Mcu.Pin1=PA1
-Mcu.Pin10=PA14
-Mcu.Pin11=PB4
-Mcu.Pin12=PB5
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_SYS_VS_DBSignals
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin2=PA2
-Mcu.Pin3=PA3
-Mcu.Pin4=PB0
-Mcu.Pin5=PB1
-Mcu.Pin6=PB12
-Mcu.Pin7=PB13
-Mcu.Pin8=PC7
-Mcu.Pin9=PA13
-Mcu.PinsNb=17
+Mcu.Pin0=PA1
+Mcu.Pin1=PA2
+Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin11=VP_SYS_VS_DBSignals
+Mcu.Pin12=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin13=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin14=VP_TIM3_VS_no_output1
+Mcu.Pin2=PA3
+Mcu.Pin3=PB0
+Mcu.Pin4=PB1
+Mcu.Pin5=PB13
+Mcu.Pin6=PC7
+Mcu.Pin7=PA13
+Mcu.Pin8=PA14
+Mcu.Pin9=PB5
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
 MxCube.Version=6.5.0
 MxDb.Version=DB.6.0.50
-NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
@@ -120,8 +88,6 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
-PA0.Mode=IN1-Single-Ended
-PA0.Signal=ADC1_IN1
 PA1.Signal=S_TIM2_CH2
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
@@ -135,12 +101,8 @@ PB0.Mode=IN12-Single-Ended
 PB0.Signal=ADC3_IN12
 PB1.Mode=IN1-Single-Ended
 PB1.Signal=ADC3_IN1
-PB12.Mode=IN3-Single-Ended
-PB12.Signal=ADC4_IN3
 PB13.Mode=IN5-Single-Ended
 PB13.Signal=ADC3_IN5
-PB4.Locked=true
-PB4.Signal=S_TIM3_CH1
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=TEST_ADC
 PB5.Locked=true
@@ -175,7 +137,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC3_Init-ADC3-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_ADC4_Init-ADC4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_DMA_Init-DMA-false-HAL-true,5-MX_ADC3_Init-ADC3-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADC12Freq_Value=150000000
 RCC.ADC345Freq_Value=150000000
 RCC.AHBFreq_Value=150000000
@@ -227,8 +189,6 @@ RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=300000000
 SH.S_TIM2_CH2.0=TIM2_CH2,PWM Generation2 CH2
 SH.S_TIM2_CH2.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
 SH.S_TIM3_CH2.ConfNb=1
 TIM2.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -237,9 +197,9 @@ TIM2.PeriodNoDither=149
 TIM2.Prescaler=9
 TIM2.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM3.IPParameters=Prescaler,PeriodNoDither,TIM_MasterOutputTrigger,Channel-PWM Generation2 CH2,AutoReloadPreload,Channel-PWM Generation1 CH1
+TIM3.IPParameters=Prescaler,PeriodNoDither,TIM_MasterOutputTrigger,Channel-PWM Generation2 CH2,AutoReloadPreload,Channel-PWM Generation1 No Output
 TIM3.PeriodNoDither=149
 TIM3.Prescaler=9
 TIM3.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
@@ -253,5 +213,7 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM3_VS_no_output1.Signal=TIM3_VS_no_output1
 board=custom
 isbadioc=false
